<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A1A9BA"
    android:orientation="vertical"
    tools:context=".MainActivity">

   <TextView
       android:id="@+id/tvLabelInput"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="8dp"
       android:layout_marginBottom="16dp"
       android:background="#ffffff"
       android:text="@string/tv_msg"
       android:textSize="24sp" />

   <EditText
       android:id="@+id/etInput"
       android:layout_width="match_parent"
       android:layout_height="49dp"
       android:layout_marginTop="8dp"
       android:layout_marginBottom="24dp"
       android:background="#ffffff"
       android:inputType="text" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="#df7401"
       android:orientation="horizontal">

      <CheckBox
          android:id="@+id/cd_drink"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="24dp"
          android:background="#ffffff"
          android:text="@string/cb_drink" />

      <CheckBox
          android:id="@+id/cd_food"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="#ffffff"
          android:text="@string/cb_food" />
   </LinearLayout>

   <RadioGroup
       android:layout_width="match_parent"
       android:layout_height="75dp"
       android:layout_marginTop="8dp"
       android:layout_marginBottom="8dp"
       android:background="#df7401"
       android:orientation="horizontal"
       android:paddingTop="8dp"
       android:paddingBottom="8dp">

      <RadioButton
          android:id="@+id/rbMale"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="24dp"
          android:layout_marginEnd="24dp"
          android:background="#ffffff"
          android:text="@string/rb_male" />

      <RadioButton
          android:id="@+id/rbFeMale"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="24dp"
          android:background="#ffffff"
          android:text="@string/rb_female" />

      <RadioButton
          android:id="@+id/rb_NoAnswer"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="#ffffff"
          android:text="@string/rb_NoAnswer" />

   </RadioGroup>

   <Button
       android:id="@+id/btSave"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/bt_save" />

</LinearLayout>